zellij-utils/src/input/unit/snapshots/zellij_utils__input__layout__layout_test__global_cwd_and_tab_cwd_prepended_to_panes_with_and_without_cwd.snap
---
source: zellij-utils/src/input/./unit/layout_test.rs
assertion_line: 1898
expression: "normalize_layout_debug(format!(\"{:#?}\", layout))"
---
Layout {
    tabs: [
        (
            None,
            TiledPaneLayout {
                children_split_direction: Horizontal,
                name: None,
                children: [
                    TiledPaneLayout {
                        children_split_direction: Horizontal,
                        name: None,
                        children: [],
                        split_size: None,
                        run: Some(
                            Cwd(
                                "/tmp/./foo",
                            ),
                        ),
                        borderless: None,
                        focus: None,
                        external_children_index: None,
                        children_are_stacked: false,
                        is_expanded_in_stack: false,
                        exclude_from_sync: None,
                        run_instructions_to_ignore: [],
                        hide_floating_panes: false,
                        pane_initial_contents: None,
                        default_fg: None,
                        default_bg: None,
                    },
                    TiledPaneLayout {
                        children_split_direction: Horizontal,
                        name: None,
                        children: [],
                        split_size: None,
                        run: Some(
                            Command(
                                RunCommand {
                                    command: "tail",
                                    args: [],
                                    cwd: Some(
                                        "/tmp/./foo/./bar",
                                    ),
                                    hold_on_close: true,
                                    hold_on_start: false,
                                    originating_plugin: None,
                                    use_terminal_title: false,
                                    env: {},
                                },
                            ),
                        ),
                        borderless: None,
                        focus: None,
                        external_children_index: None,
                        children_are_stacked: false,
                        is_expanded_in_stack: false,
                        exclude_from_sync: None,
                        run_instructions_to_ignore: [],
                        hide_floating_panes: false,
                        pane_initial_contents: None,
                        default_fg: None,
                        default_bg: None,
                    },
                ],
                split_size: None,
                run: Some(
                    Cwd(
                        "/tmp/./foo",
                    ),
                ),
                borderless: None,
                focus: None,
                external_children_index: None,
                children_are_stacked: false,
                is_expanded_in_stack: false,
                exclude_from_sync: None,
                run_instructions_to_ignore: [],
                hide_floating_panes: false,
                pane_initial_contents: None,
                default_fg: None,
                default_bg: None,
            },
            [],
        ),
    ],
    focused_tab_index: None,
    template: Some(
        (
            TiledPaneLayout {
                children_split_direction: Horizontal,
                name: None,
                children: [],
                split_size: None,
                run: None,
                borderless: None,
                focus: None,
                external_children_index: None,
                children_are_stacked: false,
                is_expanded_in_stack: false,
                exclude_from_sync: None,
                run_instructions_to_ignore: [],
                hide_floating_panes: false,
                pane_initial_contents: None,
                default_fg: None,
                default_bg: None,
            },
            [],
        ),
    ),
    swap_layouts: [],
    swap_tiled_layouts: [],
    swap_floating_layouts: [],
}
